--- a/banking_system/banking_system/templates/my-profile.html
+++ b/banking_system/banking_system/templates/my-profile.html
@@ -5,7 +5,7 @@
     {% endcomment %} {% comment %}
     <div class="col col-md-8">
       {% endcomment %}
-      <div class="col" style="margin-left: 15%">
+      <div class="col">
         <h1 class="alert alert-primary">My Profile</h1>
         {% comment %}
         <div class="card mt-2">
