--- a/banking_system/banking_system/templates/loans.html
+++ b/banking_system/banking_system/templates/loans.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %} {% comment %}
 <div class="row justify-content-center mt-2">
   {% endcomment %}
-  <div class="row mt-2">
+  <div class="row mt-2" style="width: 100%">
     {% comment %}
     <div class="col col-md-8">
       {% endcomment %}
@@ -10,9 +10,19 @@
         {% if not pending_loans and not due_loans and not paid_loans and not rejected_loans %}
         <h1 class="mt-4">You dont have any loans as of now</h1>
         {% else %}
-        <h1>My Loans</h1>
+        <h1
+          class="mt-2 alert alert-primary"
+          style="margin-right: 150px; margin-left: 150px"
+        >
+          My Loans
+        </h1>
         {% endif %} {% if pending_loans %}
-        <h4>Pending Loans</h4>
+        <h4
+          class="mt-2 alert alert-primary"
+          style="margin-right: 150px; margin-left: 150px"
+        >
+          Pending Loans
+        </h4>
         {% for loan in pending_loans %} {% comment %}
         <div class="card mt-2">
           <div class="card-body">
@@ -97,6 +107,8 @@
             border: 1px solid #dee2e6;
             border-radius: 0.95rem;
             box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3);
+            margin-right: 150px;
+            margin-left: 150px;
           "
         >
           <div class="card-body">
@@ -179,7 +191,12 @@
           </div>
         </div>
         {% endfor %} {% endif %} {% if due_loans %}
-        <h4 class="mt-2">Due Loans</h4>
+        <h4
+          class="mt-2 alert alert-primary"
+          style="margin-right: 150px; margin-left: 150px"
+        >
+          Due Loans
+        </h4>
         {% for loan in due_loans %} {% comment %}
         <div class="card mt-2">
           <div class="card-body">
@@ -205,6 +222,8 @@
             border: 1px solid #dee2e6;
             border-radius: 0.95rem;
             box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3);
+            margin-right: 150px;
+            margin-left: 150px;
           "
         >
           <div class="card-body">
@@ -229,7 +248,12 @@
         </div>
         <br />
         {% endfor %} {% endif %}{% if paid_loans %}
-        <h4 class="mt-2">Paid Loans</h4>
+        <h4
+          class="mt-2 alert alert-primary"
+          style="margin-right: 150px; margin-left: 150px"
+        >
+          Paid Loans
+        </h4>
         {% for loan in paid_loans %} {% comment %}
         <div class="card mt-2">
           <div class="card-body">
@@ -254,6 +278,8 @@
             background-color: #f8f9fa;
             border: 1px solid #dee2e6;
             border-radius: 0.95rem;
+            margin-right: 150px;
+            margin-left: 150px;
             box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3);
           "
         >
@@ -278,12 +304,32 @@
           </div>
         </div>
         {% endfor %} {% endif %} {% if rejected_loans %}
-        <h4 class="mt-2">Rejected Loans</h4>
+        <h4
+          class="mt-2 alert alert-primary"
+          style="margin-right: 150px; margin-left: 150px"
+        >
+          Rejected Loans
+        </h4>
         {% for loan in rejected_loans %}
 
-        <div class="card mt-2">
+        <div
+          class="card mt-2"
+          style="
+            background-color: #f8f9fa;
+            border: 1px solid #dee2e6;
+            border-radius: 0.95rem;
+            margin-right: 150px;
+            margin-left: 150px;
+            box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3);
+          "
+        >
           <div class="card-body">
-            <h5 class="card-title">Amount: {{loan.amount}}&#8377;</h5>
+            <h5
+              class="card-title"
+              style="color: #007bff; font-size: 1.25rem; font-weight: bold"
+            >
+              Amount: {{loan.amount}}&#8377;
+            </h5>
             <h6 class="card-subtitle mb-2 text-muted">
               Loan Type: {{loan.get_loan_type_display}}
             </h6>
