--- a/banking_system/banking_system/templates/branches.html
+++ b/banking_system/banking_system/templates/branches.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %} {% block content %} {% comment %}
 <div class="row justify-content-center mt-2">
   {% endcomment %}
-  <div class="row mt-2">
+  <div class="row mt-2" style="width: 100%">
     <div class="col">
       {% comment %}
       <div class="col col-md-8">
         {% endcomment %}
-        <h1>Branches</h1>
+        <h1
+          class="mt-2 alert alert-primary"
+          style="margin-right: 150px; margin-left: 150px"
+        >
+          Branches
+        </h1>
         {% for branch in branches %} {% comment %}
         <div class="card mt-2">
           <div class="card-body">
@@ -26,6 +31,8 @@
             border: 1px solid #dee2e6;
             border-radius: 0.95rem;
             box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3);
+            margin-right: 150px;
+            margin-left: 150px;
           "
         >
           <div class="card-body">
