--- a/banking_system/banking_system/templates/my-profile.html
+++ b/banking_system/banking_system/templates/my-profile.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %} {% block content %}
-<div class="row mt-2">
+<div class="row mt-2" style="width: 100%">
   {% comment %}
   <div class="row justify-content-center mt-2">
     {% endcomment %} {% comment %}
     <div class="col col-md-8">
       {% endcomment %}
       <div class="col">
-        <h1 class="alert alert-primary">My Profile</h1>
+        <h1
+          class="alert alert-primary"
+          style="margin-right: 150px; margin-left: 150px"
+        >
+          My Profile
+        </h1>
         {% comment %}
         <div class="card mt-2">
           <div class="card-body">
@@ -118,6 +123,8 @@
             border: 1px solid #dee2e6;
             border-radius: 0.95rem;
             box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3);
+            margin-left: 150px;
+            margin-right: 150px;
           "
         >
           <div class="card-body">
