--- a/banking_system/banking_system/templates/notifications.html
+++ b/banking_system/banking_system/templates/notifications.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<div class="row mt-2">
+<div class="row mt-2" style="width: 100%">
   {% comment %}
   <div class="row justify-content-center mt-2">
     {% endcomment %}
@@ -10,7 +10,12 @@
         <h1>You dont have any notifications as of yet.</h1>
         {% else %}
 
-        <h1>Notifications</h1>
+        <h1
+          class="mt-2 alert alert-primary"
+          style="margin-right: 150px; margin-left: 150px"
+        >
+          Notifications
+        </h1>
         {% for notification in notifications %} {% comment %}
         <div class="card mt-2">
           <div class="card-body">
@@ -32,6 +37,8 @@
             border: 1px solid #dee2e6;
             border-radius: 0.95rem;
             box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3);
+            margin-right: 150px;
+            margin-left: 150px;
           "
         >
           <div class="card-body">
