--- a/banking_system/banking_system/templates/index.html
+++ b/banking_system/banking_system/templates/index.html
@@ -51,7 +51,7 @@
               class="card-title"
               style="color: #007bff; font-size: 1.25rem; font-weight: bold"
             >
-              Amount: {{transaction.amount}}&#8377;
+              Amount: &#8377;{{transaction.amount}}
             </h5>
             <h6 class="card-subtitle mb-2 text-muted">
               Transaction Type: {{transaction.transaction_type}}
