--- a/banking_system/banking_system/templates/base.html
+++ b/banking_system/banking_system/templates/base.html
@@ -44,85 +44,19 @@
         <li><a href="{% url 'loan-request' %}">Request Loan</a></li>
         <li>
           <a href="{% url 'notifications' %}"
-            >Notifications{% if count_notifications %}
+            >Notifications {% if request.user.is_authenticated %}
+            <!-- prettier-ignore -->
+            {% if count_notifications %}
             <span class="badge rounded-pill bg-danger"
               >{{count_notifications}}</span
-            >{% endif %}</a
-          >
+            >{% endif %} {% endif %}
+          </a>
         </li>
         <li><a href="{% url 'my-profile' %}">Profile</a></li>
         <li><a href="{% url 'logout' %}">Logout</a></li>
       </ul>
     </nav>
-    {% comment %}
-    <nav
-      class="navbar navbar-expand-lg navbar-light"
-      style="background-color: #76b6db"
-    >
-      <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'index' %}">Banking System</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-1 mb-lg-0">
-            <li class="nav-item mr-4">
-              <a class="nav-link" href="{% url 'branches' %}"
-                ><i class="fa-solid fa-building-columns"></i> Branches</a
-              >
-            </li>
-            <li class="nav-item mr-4">
-              <a class="nav-link" href="{% url 'loans' %}"
-                ><i class="fa-solid fa-money-bill-transfer"></i>My Loans</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link mr-4" href="{% url 'notifications' %}"
-                ><i class="fa-solid fa-bell"></i> Notifications
-                <!-- prettier-ignore -->
-                {% if count_notifications %}
-                <span class="badge rounded-pill bg-danger"
-                  >{{count_notifications}}</span
-                >{% endif %}
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link mr-4" href="{% url 'loan-request' %}"
-                ><i class="fa-solid fa-wallet"></i> Request A Loan
-              </a>
-            </li>
-            <li class="nav-item mr-4">
-              <a class="nav-link" href="{% url 'my-profile' %}"
-                ><i class="fa fa-user"></i> My
-                Profile({{request.user.account_name}})</a
-              >
-            </li>
-            <li class="nav-item mr-4">
-              <a class="nav-link" href="{% url 'logout' %}"
-                ><i class="fa-solid fa-right-from-bracket"></i> Logout</a
-              >
-            </li>
 
-            {% if request.user.is_superuser %}
-            <li class="nav-item mr-4">
-              <a class="nav-link" href="/admin"
-                ><i class="fa fa-user"></i> Admin</a
-              >
-            </li>
-            {% endif %}
-          </ul>
-        </div>
-      </div>
-    </nav>
-    {% endcomment %}
     <!-- prettier-ignore-->
     {% block content %}  {% endblock content %}
     <script
